Platform/k8s/platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform
  namespace: platform-system
spec:
  selector:
    app.kubernetes.io/name: platform
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
